Updated .gitignore and started introduction

--- a/commands.tex
+++ b/commands.tex
@@ -94,6 +94,28 @@ TEXT\parencite[compare][]{knuthwebsite}
 TEXT\parencite[e.g.][page 300]{einstein}
 
 
+\begin{equation*}
+\begin{matrix}
+1 & 2 \\
+3 & 4
+\end{matrix} \qquad
+\begin{bmatrix}
+p_{11} & p_{12} & \ldots
+& p_{1n} \\
+p_{21} & p_{22} & \ldots
+& p_{2n} \\
+\vdots & \vdots & \ddots
+& \vdots \\
+p_{m1} & p_{m2} & \ldots
+& p_{mn}
+\end{bmatrix}
+\end{equation*}
+
+
+
+
+
+
 
 
 
