--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \graphicspath{ {images/} }
+\usepackage{indentfirst}
 \usepackage[a4paper,width=150mm,top=25mm,bottom=25mm,bindingoffset=6mm]{geometry}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
@@ -31,7 +32,7 @@ Who is this dedicated to?
 I declare that...
 
 \chapter*{Acknowledgments}
-I want to thank...
+\input{chapters/acknowledgments}
 
 \tableofcontents
 \listoffigures
